syntax = "proto3";
package S2C;

/** remember to put your message here as a kind support**/
message Message {
    oneof kind {
        Error Error = 1;
        SC_TEST_ECHO SC_TEST_ECHO = 2;
        SC_ROLE_ONLINE SC_ROLE_ONLINE = 3;
        SC_ROLE_HEART_BEAT SC_ROLE_HEART_BEAT = 4;
    }
}

/** you must name the message in the following format: [PACKAGE_NAME]_[CONTROLLER_NAME]_[METHOD_NAME]**/
message SC_TEST_ECHO {
    int32 cmd_id = 1;
    string msg = 2;
}

message Error {
    int32 code = 1;
    string msg = 2;
}


message SC_ROLE_ONLINE {
    int32 role_id = 1;
}

message SC_ROLE_HEART_BEAT {

}
